<resources>
    <string name="app_name">Stocks</string>
    <string name="current_price">Current Price</string>
    <string name="stock_symbol">Stock Symbol</string>
    <string name="amount">Amount</string>
    <string name="bought_amount">Bought Amount</string>
    <string name="current_stock_price">Current Stock Price</string>
    <string name="bought_price">Bought Price</string>
    <string name="clear">Clear</string>
    <string name="image">Image</string>
    <string name="add">Add</string>
    <string name="curr_price">Current</string>
    <string name="price">Price</string>
    <string name="amount_owned">Owned</string>
    <string name="stock_amount">Stock Amount</string>
    <string name="total_worth">Total Worth</string>
    <string name="total">Total</string>
    <string name="item_name">Name</string>
    <string name="delete_all">Delete All</string>
    <string name="add_stocks_disclaimer">This is a beta version, you can choose from these stocks:\nApple, Google, Microsoft, Amazon, Tesla, Intel</string>
    <string name="prices_disclaimer">This is a beta version,\nprices are chosen randomly from a hardcoded source.</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="unfollow_stock_pormpt">Do you want to unfollow this stock?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_a_new_stock_to_follow">Add A Stock To Follow</string>
    <string name="profit">Profit</string>
    <string name="loss">Loss</string>
    <string name="portfolio">Portfolio</string>
    <string name="bought">Bought</string>
    <string name="current">Current</string>
    <string name="change">Change</string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="Tesla" translatable="false">Tesla</string>
    <string name="Amazon" translatable="false">Amazon</string>
    <string name="Intel" translatable="false">Intel</string>
    <string name="Google" translatable="false">Google</string>
    <string name="Apple" translatable="false">Apple</string>
    <string name="Microsoft" translatable="false">Microsoft</string>
    <string name="Netflix" translatable="false">Netflix</string>
    <string name="Facebook" translatable="false">Facebook</string>
    <string name="fillAmount">Please fill Amount</string>
    <string name="fillPrice">Please fill price</string>
    <string name="fillStock">"Please select a Stock"</string>
    <string name="favorites">Favorites</string>
    <string name="selectImage">"No image selected"</string>
    <string name="added_to_favorites">Added to favorites!</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="Nvidia" translatable="false">Nvidia</string>
    <string name="Samsung" translatable="false">Samsung</string>
    <string name="loading">Loading...</string>
    <string name="empty_list_message">Empty list</string>
    <string name="networkError">Network Error</string>
    <string name="today">Today</string>
    <string name="total_change">Since Bought</string>
</resources>