<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ede9e1"
    android:padding="16dp"
    tools:context=".AddNewStockFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/addStockTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/add_a_new_stock_to_follow"
            android:textColor="@color/my_purple"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/companyNameBox"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/company_name"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:hint="@string/enter_company_name"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:maxLines="3"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Suggestion.Elevated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Google"
                    app:chipStrokeColor="@color/white"
                    app:chipStrokeWidth="1dp" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Suggestion.Elevated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Apple"
                    app:chipStrokeColor="@color/white"
                    app:chipStrokeWidth="1dp" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Suggestion.Elevated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Netflix"
                    app:chipStrokeColor="@color/white"
                    app:chipStrokeWidth="1dp" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Suggestion.Elevated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Intel" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Suggestion.Elevated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Microsoft"
                    app:chipStrokeColor="@color/white"
                    app:chipStrokeWidth="1dp" />


                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Suggestion.Elevated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Facebook"
                    app:chipStrokeColor="@color/white"
                    app:chipStrokeWidth="1dp" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Suggestion.Elevated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Samsung"
                    app:chipStrokeColor="@color/white"
                    app:chipStrokeWidth="1dp" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Suggestion.Elevated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Amazon"
                    app:chipStrokeColor="@color/white"
                    app:chipStrokeWidth="1dp" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Suggestion.Elevated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Tesla"
                    app:chipStrokeColor="@color/white"
                    app:chipStrokeWidth="1dp" />


                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Suggestion.Elevated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Nvidia"
                    app:chipStrokeColor="@color/white"
                    app:chipStrokeWidth="1dp" />


            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/stockTickerBox"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/stock_ticker"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/stock_symbol"
                app:elevation="3dp"
                app:strokeWidth="2dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boughtAmountBox"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bought_amount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bought_amount"
                android:inputType="number"
                android:maxLength="15"
                app:elevation="3dp"
                app:strokeWidth="2dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boughtPriceBox"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bought_price"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:hint="@string/bought_price"
                android:inputType="numberDecimal"
                android:maxLength="15"
                app:elevation="3dp"
                app:strokeWidth="2dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/preview_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:src="@drawable/app_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.481" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_image_button"
                style="?attr/materialIconButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                app:elevation="3dp"
                app:icon="@drawable/add_image"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp" />


            <Button
                android:id="@+id/reset_button"
                style="@style/Widget.Material3.Button.TonalButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center"
                android:text="@string/clear"
                android:textAlignment="center"
                app:elevation="3dp"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp" />


            <Button
                android:id="@+id/add_stock_button"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:backgroundTint="@color/my_purple"
                android:text="@string/add"
                android:textAlignment="center"
                app:elevation="3dp"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
