<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView

    android:clickable="true"
    android:focusable="true"
    android:checkable="true"


    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:contentPadding="10dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--TODO: Match fields to AddItemFragment-->

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/ic_launcher"
            android:layout_margin="16dp"
            android:layout_gravity="center_vertical|start"
            android:id="@+id/item_image" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="Name"
                android:id="@+id/stock_name"
                android:gravity="center"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:gravity="center"
                android:text="@string/current_price"
                android:id="@+id/stock_price_Title"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="Extra item description"
                android:id="@+id/stock_price"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:gravity="center"
                android:text="@string/stock_symbol"
                android:id="@+id/stock_symbol_Title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="Extra item description"
                android:id="@+id/stock_symbol"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:gravity="center"
                android:text="@string/amount"
                android:id="@+id/stock_amount_Title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="Extra item description"
                android:id="@+id/stock_amount"/>
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
